<resources>
    <string name="app_name">Augment My Campus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_camera">Camera</string>
    <string name="title_data">Data</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="scanBtn">Scan</string>
    <string name="scan_info">scanning for QR-code...</string>
    <string name="scanned">scanned </string>

    <string name="placeholder_fragment_settings_user">Username</string>
    <string name="placeholder_fragment_settings_password">Password</string>
    <string name="text_fragment_settings_submit">Login</string>
    <string name="text_fragment_settings_logout">Logout</string>
    <string name="invalid_credentials">Invalid user or password</string>
    <string name="ok">OK</string>

    <string name="error_default_msg">an error occurred</string>
    <string name="error_invalid_url">this qr code is not supported</string>
    <string name="error_no_connection">no connection to server</string>

    <string name="label_number_text">Number</string>
    <string name="label_semester_text">Semester</string>
    <string name="label_ects_text">ECTS</string>
    <string name="label_lecturer_text">Lecturer</string>

    <string name="action_hide_past_events">Hide past events</string>
    <string name="action_show_past_events">Show past events</string>

    <string name="settings_language">Language</string>
    <string name="account_image">Account image</string>
    <string name="title_search">Search</string>
    <string name="no_data_text">No data</string>
    <string-array name="availableLanguages">
        <item>English</item>
        <item>Pусский</item>
    </string-array>

</resources>